--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - 'Dockerfile'
       - '.github/workflows/ci.yml'
