--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,10 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches:
-      - master
     paths:
-      - 'Dockerfile'
-      - '.github/workflows/ci.yml'
-  
+      - "Dockerfile"
+      - ".github/workflows/ci.yml"
+
   workflow_dispatch:
 
 jobs:
@@ -22,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -31,10 +29,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
